--- a/manifest.json
+++ b/manifest.json
@@ -1,34 +1,16 @@
 {
-  "short_name": "Encrypt mnemonic",
+  "short_name": "enc",
   "name": "Encrypt mnemonic",
+  "description": "Encrypt mnemonic",
+  "display": "minimal-ui",
   "icons": [
     {
-      "src": "/favicon.ico",
+      "src": "./favicon.ico",
       "type": "image/png",
       "sizes": "256x256"
     }
   ],
-  "id": "/?source=pwa",
-  "start_url": "/?source=pwa",
-  "background_color": "#3367D6",
-  "display": "standalone",
-  "scope": "/",
-  "theme_color": "#3367D6",
-  "shortcuts": [
-    {
-      "name": "Encrypt mnemonic",
-      "short_name": "Encrypt mnemonic",
-      "description": "Encrypt mnemonic",
-      "url": "/tomorrow?source=pwa",
-      "icons": [{ "src": "/favicon.ico", "sizes": "256x256" }]
-    }
-  ],
-  "description": "Encrypt mnemonic",
-  "screenshots": [
-    {
-      "src": "/favicon.ico",
-      "type": "image/png",
-      "sizes": "256x256"
-    }
-  ]
+  "id": "./",
+  "start_url": "./",
+  "scope": "./"
 }
